[tool.poetry]
name = "ynab"
version = "19"
description = "Automate downloading and uploading transactions to YNAB"

license = "MIT"

authors = [
    "Harry Biddle",
    "John Boreiko"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/harrybiddle/ynab"
homepage = "https://github.com/harrybiddle/ynab"

keywords = ['ynab youneedabudget selenium']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
toml = "^0.9"
selenium = "*"
polling = "*"
schema = "*"
pyyaml = "*"
mock = "*"
keyring = "*"
requests = "*"
coverage = "*"
fuzzywuzzy = "*"
xlrd = "*"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
flake8-isort = "*"
faker = "*"
factory_boy = "*"

[tool.poetry.scripts]
ynab = 'ynab.main:main'
