[tool.poetry]
name = "ynab"
version = "20"
description = "Automate downloading and uploading transactions to YNAB"

license = "MIT"

authors = [
    "Harry Biddle",
    "John Boreiko"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/harrybiddle/ynab"
homepage = "https://github.com/harrybiddle/ynab"

keywords = ['ynab youneedabudget selenium']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
toml = "^0.9"
selenium = "*"
polling = "*"
schema = "*"
pyyaml = "*"
mock = "*"
keyring = "*"
requests = "^2.21"
coverage = "^5.0"
fuzzywuzzy = "^0.17.0"

[tool.poetry.dev-dependencies]
black = { version = "^19.10b0", allows-prereleases = true }
flake8 = "^3.7"
flake8-isort = "^2.6"
faker = "^3.0"
factory_boy = "^2.12"

[tool.poetry.scripts]
ynab = 'ynab.main:main'
